--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node server/server"
+        "start": "node server/server.js"
     },
     "keywords": [],
     "author": "",
