--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node server/server.js"
+        "start": "node server/server.js",
+        "dev": "nodemon server/server.js "
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.9.9",
+        "mongoose-unique-validator": "^2.0.3",
+        "underscore": "^1.10.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.3"
     }
 }
